@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Oxref V 1.00.02</title>
+<title>Oxref V 1.00.03</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr>
-<h1>Oxref V 1.00.02</h1>
+<h1>Oxref V 1.00.03</h1>
 <h2>Frank B. Brokken (f.b.brokken@rug.nl)<br></h2>
 
 <h2>Center for Information Technology, University of Groningen</h2><h2>2012-2015</h2>
@@ -34,15 +34,15 @@ release page):
 <p>
 <ul>
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.02">1.00.02</a>
+Oct  3, 2015;
+        <li> <a href="https://github.com/fbb-git/oxref/releases/tag/1.00.02">1.00.02</a>
 Feb 12, 2015;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/0.91.00">0.91.00</a>
 Jan 25, 2013;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/0.90.10">0.90.10</a>
 May 12, 2012;
         <li> <a href="https://github.com/fbb-git/oxref/releases/tag/0.90.04">0.90.04</a>
-May 6, 2012;
-        <li> <a href="https://github.com/fbb-git/oxref/releases/tag/0.90.03">0.90.03</a>
-May 3, 2012.
+May 6, 2012.
         </ul>
     
 <p>
