@@ -38,6 +38,9 @@ release page):
         itemization(
         it() url(1.00.02)
                 (https://github.com/fbb-git/_project_/releases/tag/1.00.02)
+Oct  3, 2015;
+        it() url(1.00.02)
+                (https://github.com/fbb-git/_project_/releases/tag/1.00.02)
 Feb 12, 2015;
         it() url(0.91.00)
                 (https://github.com/fbb-git/_project_/releases/tag/0.91.00)
@@ -47,10 +50,7 @@ Jan 25, 2013;
 May 12, 2012;
         it() url(0.90.04)
                 (https://github.com/fbb-git/_project_/releases/tag/0.90.04)
-May 6, 2012;
-        it() url(0.90.03)
-                (https://github.com/fbb-git/_project_/releases/tag/0.90.03)
-May 3, 2012.
+May 6, 2012.
         )
     COMMENT(NOTE: LAST ITEM SHOULD END IN . )
 
