@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>oxref</h1>
-<h2>oxref.1.00.02.tar.gz</h2>
+<h2>oxref.1.00.03.tar.gz</h2>
 <h2>2012-2015</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr>
 <h1>oxref(1)</h1>
-<h2>oxref.1.00.02.tar.gz oxref - cross reference utility</h2>
+<h2>oxref.1.00.03.tar.gz oxref - cross reference utility</h2>
 <h2>2012-2015</h2>
 
 
